clang/test/BSC/Negative/Trait/GenericTrait/trait_pointer_compare_no_impl_point_type/trait_pointer_compare_no_impl_point_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait Future<T> {
    T poll(This* this);
};

int int::poll(int* this) {
    return *this;
}

impl trait Future<int> for int;

int main() {
    int a = 1;
    trait Future<int> *f = &a;
    double b = 1.0;
    double *x = &b;
    if (x == f) {  // expected-warning {{expected a pointer type which has implemented 'trait Future<int>', found 'double *'}}
        return 1;
    }
   
    return 0;
}
